.provarCaches/00D5f000005vwGkEAI/objects/rstk__pebom__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_pebom</customHelpPage>
    <description>pebom__c: Holds the definition of products as designed by Engineering. A BOM is a single level definition of the Component Items (and Qty Per) required to build the Parent Item being defined by the Bill of Material. Example Parent Item A is made up of Component Items B, C and 1.</description>
    <fields>
        <fullName>rstk__custpage_custom_addrevslct__c</fullName>
        <inlineHelpText>Temporary Add Revision used while creating BOM</inlineHelpText>
        <label>Temp Add Revision</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpage_custom_delrevslct__c</fullName>
        <inlineHelpText>Temporary Delete Revision used while creating BOM</inlineHelpText>
        <label>Temp Delete Revision</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>IF(ISBLANK(rstk__pebom_addrev__r.rstk__externalid__c), rstk__pebom_item__r.rstk__externalid__c ,rstk__pebom_addrev__r.rstk__externalid__c) &amp; &apos;_&apos; &amp;  rstk__pebom_compitem__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__pebom_item__r.rstk__formula_item__c + &apos; (&apos; + rstk__pebom_compitem__r.Name + &apos;)&apos;, 80)</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__pebom_compitem__r.rstk__peitem_item__c + &apos; &apos; +  rstk__pebom_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__pebom_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_adddate__c</fullName>
        <description>Determines the Start Date when a Parent Item Revision is effective (see Start Date of the Engineering Item Revision above). (PG)</description>
        <inlineHelpText>The Start Date when a Parent Item Revision becomes effective.</inlineHelpText>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_addrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Determines an Engineering Item Revision of a Parent Item which defines the Phase In Add Rev No of a BOM configuration for the Parent Item with this BOM Component. (PG)</description>
        <inlineHelpText>The Parent Item Revision Number at which this component is added.</inlineHelpText>
        <label>Add Revision</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Add Revision: Item Number</errorMessage>
            <filterItems>
                <field>rstk__peitemrev__c.rstk__peitemrev_item__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__pebom_item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>BOM Master (Add Revision)</relationshipLabel>
        <relationshipName>addrevpeboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_addsts_pl__c</fullName>
        <description>Valid values = P-Pending, R-Release, I – Implemented 

Applies to Parent Item (not component item)

A PEBOM is effective for a given date if the Add Status is Implemented &amp; the Add Date is before or on the given date &amp;: 

There is no Delete Date or 

There is a Delete Date but the Delete Status is Pending or Released or 

There is a Delete Data &amp; the Delete Status is Implemented but the Delete Date is after the given date 

The Phase-In values (Add Rev No, Add Date and Add Status) &amp; the Phase-Out values (Delete Rev No, Delete Date &amp; Delete Status) define the “effectivity period” – effectivity periods may not overlap, so, (assuming implemented status) the Delete Date of the Eng BOM for a given Parent Item Rev/Component must be less than or equal to the Add Date for any Eng BOMs with the same Parent Item Rev/Component (&amp; no Delete Rev/Date signifies no Phase Out so no Eng BOMs can have an effective date after the Add Date for the same Parent Item Rev/Component). (PG)</description>
        <inlineHelpText>The stage the parent item is at with regards to its inital release.  Valid values are P (Pending), R (Released) or I (Implemented).  The change is not in effect until the add status is &apos;I&apos;, implemented.</inlineHelpText>
        <label>Add Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pebom_compitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Engineering Item Master Item No of a Component Item. (PG)</description>
        <inlineHelpText>Engineering Item number of a part used to manufacture the parent item.</inlineHelpText>
        <label>Component Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Component Item: Division</errorMessage>
            <filterItems>
                <field>rstk__peitem__c.rstk__peitem_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__pebom_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>BOM Master (Component Item)</relationshipLabel>
        <relationshipName>PEBOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_deldate__c</fullName>
        <description>Date on or after which a Eng BOM record is no longer effective if the Delete Status is Implemented. (DD)</description>
        <inlineHelpText>Date on or after which a Eng BOM record is no longer effective if the Delete Status is Implemented.</inlineHelpText>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_delrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Determines an Engineering Item Revision of a Parent Item which defines the Phase Out Revision of a BOM configuration for the Parent Item with this BOM Component. 

Optional (left blank means there is not phase out date and the part is effective forever). (DD)</description>
        <inlineHelpText>This is the Parent Item Revision at which this Component is deleted.</inlineHelpText>
        <label>Delete Revision</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Delete Revision: Item Number</errorMessage>
            <filterItems>
                <field>rstk__peitemrev__c.rstk__peitemrev_item__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__pebom_item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>BOM Master (Delete Revision)</relationshipLabel>
        <relationshipName>delrevpeboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_delsts_pl__c</fullName>
        <description>Valid values are P-Pending, R-Release, I – Implemented 

See Add Status above for additional details. (DD)</description>
        <inlineHelpText>This indicates the stage the parent item is at with regards to the deletion of components.  Valid values are P (Pending), R (Released) or I (Implemented).</inlineHelpText>
        <label>Delete Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pebom_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Division is the core organizational unit which as it relates to Engineering, is the unit that maintains Engineering Items and BOM. When using Centralized Engineering, this is the Centralized Engineering Division.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>BOM Master</relationshipLabel>
        <relationshipName>divpeboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_fixqtyflag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is F, the Quantity Per of a component is multiplied by the Quantity Required of the order  

If this is T, then the Quantity Per of the component represents an absolute qty that is not multiplied by the Quantity Required . (DD)</description>
        <inlineHelpText>A &apos;fixed&apos; component qty is one that doesn&apos;t vary based on the qty of the parent item being made. When unchecked, the Qty Req of the component is the Order Qty x Qty Per. If checked, the Qty Per is a fixed qty that is not multiplied by the Order Qty.</inlineHelpText>
        <label>Fixed Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Engineering Item Master Item No of the Parent Item. (PG)</description>
        <inlineHelpText>Engineering Item Number of the Parent Item.</inlineHelpText>
        <label>Parent Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Parent Item: Division</errorMessage>
            <filterItems>
                <field>rstk__peitem__c.rstk__peitem_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__pebom_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>BOM Master (Parent Item)</relationshipLabel>
        <relationshipName>PEBOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_lne__c</fullName>
        <description>This is a user defined field. (PG)</description>
        <inlineHelpText>This optional field can be set to a value by user.</inlineHelpText>
        <label>Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_phantomovr_pl__c</fullName>
        <description>Values are null (blank) or “Use as Standard Component” 

This field only applies when the component item is a Phantom. 

When this is set to ‘Use as Standard Component’ this indicates that the Eng Type setting of the component item (i.e. the component item’s PEITEM_TYPE) should overridden and the component should be treated as a Standard Component. (DD)</description>
        <inlineHelpText>When the component item is a Phantom this can be set to a value of &apos;S&apos; which will cause the item to behave as a Standard component type rather than a Phantom in the given BOM only.</inlineHelpText>
        <label>Phantom Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as Standard Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pebom_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity of the Component Item. (DD)</description>
        <inlineHelpText>The quantity of the Component Item used in the assembly at this level.</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_refdes__c</fullName>
        <description>Reference designators are a semicolon, comma or space-separated list of values with each value consisting of one or more letters followed by a number or range of numbers (for example: R1, R3, R5-9). The underscore character is also allowed in the letter section (for example: R_5, R_1-5). 

This field acts as an engineering note and is not currently used in any Mfg programs. (DD)</description>
        <inlineHelpText>Reference designators are a semicolon, comma or space-separated list of values with each value consisting of one or two letters followed by a number.</inlineHelpText>
        <label>Reference Designators</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_scrappct__c</fullName>
        <description>The PEBOM_SCRAPPCT s (scrap percent) is really a scrap “factor” which represents how much scrap will be created in the manufacturing process which requires this component. If there is scrap, then to yield the desired Quantity Required of this component after manufacture, the Quantity Required must be adjusted upward so that after the scrapping occurs Quantity Required will be left.  

This factor is computed as 1/(1-scrappct): 

 Planned Quantity to be issued (WOORDDMD_QTYREQ) = Desired Quantity Required of the component / ( 1-scrappct).  

Note that PEBOM_SCRAPPCT is applied after the Fixed Quantity or Setup Quantity is applied. (DD)</description>
        <inlineHelpText>How much of this component will be lost during the manufacturing process for each parent item produced.  MRP will calculate additional material required based on this factor. F/E, a scrap factor of .5 means 1/2 issued will be lost.</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebom_setupqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Setup Quantity is an absolute value that will be scrapped. For example, if the Desired Quantity Required is 100 and the Setup Quantity is 2, then 102 (woorddmd_qtyreq) would be required to be supplied to the manufacturing process. (DD)</description>
        <inlineHelpText>This field is used to define the qty lost in setup.  For example, if the desired Qty Reqd is 100 and the Setup Qty is 2, then 102 would by required to be supplied to the manufacturing process. MRP will use this quantity in planning total material needed.</inlineHelpText>
        <label>Setup Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Engineering BOM Master</label>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__pebom_div__c</columns>
        <columns>rstk__pebom_item__c</columns>
        <columns>rstk__pebom_compitem__c</columns>
        <columns>rstk__pebom_addrev__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__pebom_qtyper__c</columns>
        <columns>rstk__pebom_lne__c</columns>
        <columns>rstk__pebom_addsts_pl__c</columns>
        <columns>rstk__pebom_adddate__c</columns>
        <columns>rstk__pebom_delsts_pl__c</columns>
        <columns>rstk__pebom_delrev__c</columns>
        <columns>rstk__pebom_deldate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_BOM_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__pebom_item__c</columns>
        <columns>rstk__pebom_div__c</columns>
        <columns>rstk__pebom_compitem__c</columns>
        <columns>rstk__pebom_qtyper__c</columns>
        <columns>rstk__pebom_lne__c</columns>
        <columns>rstk__pebom_addsts_pl__c</columns>
        <columns>rstk__pebom_adddate__c</columns>
        <columns>rstk__pebom_delsts_pl__c</columns>
        <columns>rstk__pebom_deldate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>BOM Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_BOM_Master2</fullName>
        <columns>NAME</columns>
        <columns>rstk__pebom_div__c</columns>
        <columns>rstk__pebom_item__c</columns>
        <columns>rstk__pebom_compitem__c</columns>
        <columns>rstk__pebom_refdes__c</columns>
        <columns>rstk__pebom_lne__c</columns>
        <columns>rstk__pebom_qtyper__c</columns>
        <columns>rstk__pebom_addrev__c</columns>
        <columns>rstk__pebom_delrev__c</columns>
        <columns>rstk__pebom_scrappct__c</columns>
        <columns>rstk__pebom_phantomovr_pl__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__pebom_fixqtyflag__c</columns>
        <filterScope>Everything</filterScope>
        <label>BOM Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_BOM_MasterSubc</fullName>
        <columns>NAME</columns>
        <columns>rstk__pebom_div__c</columns>
        <columns>rstk__pebom_item__c</columns>
        <columns>rstk__pebom_compitem__c</columns>
        <columns>rstk__pebom_qtyper__c</columns>
        <columns>rstk__pebom_lne__c</columns>
        <columns>rstk__pebom_addsts_pl__c</columns>
        <columns>rstk__pebom_adddate__c</columns>
        <columns>rstk__pebom_delsts_pl__c</columns>
        <columns>rstk__pebom_deldate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__pebom_item__c</field>
            <operation>contains</operation>
            <value>Test-Srl-Item1-21054 (Suruchi-Test-Srl-Item1-21054)</value>
        </filters>
        <label>BOM MasterSubc</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__bcbcbRS_BOM_MasterSubc</fullName>
        <columns>rstk__externalid__c</columns>
        <columns>NAME</columns>
        <columns>rstk__pebom_div__c</columns>
        <columns>rstk__pebom_item__c</columns>
        <columns>rstk__pebom_compitem__c</columns>
        <columns>rstk__pebom_qtyper__c</columns>
        <columns>rstk__pebom_lne__c</columns>
        <columns>rstk__pebom_addsts_pl__c</columns>
        <columns>rstk__pebom_adddate__c</columns>
        <columns>rstk__pebom_delsts_pl__c</columns>
        <columns>rstk__pebom_deldate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__pebom_item__c</field>
            <operation>contains</operation>
            <value>BCC Item2</value>
        </filters>
        <label>bcbBOM MasterSubc</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineering BOM Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Check_Add_Status_Values</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( rstk__pebom_addsts_pl__c , &apos;Pending&apos;), ISPICKVAL( rstk__pebom_addsts_pl__c , &apos;Released&apos;), ISPICKVAL( rstk__pebom_addsts_pl__c , &apos;Implemented&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_addsts_pl__c</errorDisplayField>
        <errorMessage>Unrecognized Add Status (valid values: Pending, Released or Implemented).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Del_Status_Values</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( rstk__pebom_delsts_pl__c , &apos;Pending&apos;), ISPICKVAL( rstk__pebom_delsts_pl__c , &apos;Released&apos;), ISPICKVAL( rstk__pebom_delsts_pl__c , &apos;Implemented&apos;),ISPICKVAL( rstk__pebom_delsts_pl__c , &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_delsts_pl__c</errorDisplayField>
        <errorMessage>Unrecognized Delete Status (valid values: Pending, Released or Implemented).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Edit_AddRev_Change</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(PRIORVALUE(rstk__pebom_addrev__c) = rstk__pebom_addrev__c)</errorConditionFormula>
        <errorDisplayField>rstk__pebom_compitem__c</errorDisplayField>
        <errorMessage>Add Revision cannot be changed (delete and re-add record).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Edit_CompItem_Change</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(PRIORVALUE(rstk__pebom_compitem__c) = rstk__pebom_compitem__c)</errorConditionFormula>
        <errorDisplayField>rstk__pebom_compitem__c</errorDisplayField>
        <errorMessage>Component Item cannot be changed (delete and re-add record).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Edit_Item_Change</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(PRIORVALUE(rstk__pebom_item__c) = rstk__pebom_item__c)</errorConditionFormula>
        <errorDisplayField>rstk__pebom_item__c</errorDisplayField>
        <errorMessage>Parent Item cannot be changed (delete and re-add record).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Phantom_Override_Values</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( rstk__pebom_phantomovr_pl__c , &apos;Use as Standard Component&apos;), ISPICKVAL( rstk__pebom_phantomovr_pl__c , &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_phantomovr_pl__c</errorDisplayField>
        <errorMessage>Unrecognized Phantom Override (valid values: blank or &apos;Use as Standard Component&apos;).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Required_Component</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebom_compitem__c == null</errorConditionFormula>
        <errorDisplayField>rstk__pebom_compitem__c</errorDisplayField>
        <errorMessage>Component Item is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_Required_Parent_Item</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebom_item__c == null</errorConditionFormula>
        <errorDisplayField>rstk__pebom_item__c</errorDisplayField>
        <errorMessage>Parent item is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Different_Parent_vs_Component_Items</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebom_item__c == rstk__pebom_compitem__c</errorConditionFormula>
        <errorMessage>Parent Item and Component Item cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Inventory_Revision_Master</fullName>
        <active>true</active>
        <description>Inventory Revision Master Items cannot have a Bill of Material</description>
        <errorConditionFormula>rstk__pebom_item__r.rstk__peitem_invrevmaster__c == true</errorConditionFormula>
        <errorMessage>Inventory Revision Master Items cannot have a Bill of Material</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Inventory_Revision_Master_Component</fullName>
        <active>true</active>
        <description>Inventory Revision Master Items cannot be used on a Bill of Material</description>
        <errorConditionFormula>rstk__pebom_compitem__r.rstk__peitem_invrevmaster__c == true</errorConditionFormula>
        <errorMessage>Inventory Revision Master Items cannot be used on a Bill of Material</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_Negative_Qty_Per</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebom_qtyper__c &lt; 0</errorConditionFormula>
        <errorDisplayField>rstk__pebom_qtyper__c</errorDisplayField>
        <errorMessage>Quantity Per must be greater than or equal to zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_Rev_Ctrl_Check_Add_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( rstk__pebom_div__r.rstk__sydiv_revcntlact__c),ISBLANK(rstk__pebom_adddate__c))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_adddate__c</errorDisplayField>
        <errorMessage>Add Date is required (Division is not under Revision Control).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_Rev_Ctrl_Check_Add_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( rstk__pebom_div__r.rstk__sydiv_revcntlact__c),ISPICKVAL(rstk__pebom_addsts_pl__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_addsts_pl__c</errorDisplayField>
        <errorMessage>Add Status is required (Division is not under Revision Control).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_Rev_Ctrl_Check_Del_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( rstk__pebom_div__r.rstk__sydiv_revcntlact__c),AND(NOT(ISBLANK(rstk__pebom_deldate__c)),ISPICKVAL(rstk__pebom_delsts_pl__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_delsts_pl__c</errorDisplayField>
        <errorMessage>Delete Status is required if Delete Date is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_Rev_Ctrl_Check_Del_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( rstk__pebom_div__r.rstk__sydiv_revcntlact__c),AND(ISBLANK(rstk__pebom_deldate__c),NOT(ISPICKVAL(rstk__pebom_delsts_pl__c,&quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_deldate__c</errorDisplayField>
        <errorMessage>Delete Date is required if Delete Status is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Override_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(rstk__pebom_compitem__r.rstk__peitem_type_pl__c,&apos;Phantom&apos;)), ISPICKVAL( rstk__pebom_phantomovr_pl__c,&apos;Use as Standard Component&apos;))</errorConditionFormula>
        <errorDisplayField>rstk__pebom_phantomovr_pl__c</errorDisplayField>
        <errorMessage>Component must be type Phantom to have Phantom Overrider Indicator of &apos;Use as Standard Component&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Phantom_Override_Fixed_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(rstk__pebom_compitem__r.rstk__peitem_type_pl__c  , &apos;Phantom&apos;) &amp;&amp;  rstk__pebom_fixqtyflag__c == true</errorConditionFormula>
        <errorDisplayField>rstk__pebom_phantomovr_pl__c</errorDisplayField>
        <errorMessage>Fixed Quantity cannot be selected when Component Item type is &apos;Phantom&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Rev_Check</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebom_div__r.rstk__sydiv_revcntlact__c &amp;&amp; rstk__pebom_addrev__c==null</errorConditionFormula>
        <errorDisplayField>rstk__pebom_addrev__c</errorDisplayField>
        <errorMessage>Add Revision is required (Revision control is active for Division).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Scrap_Factor_Range</fullName>
        <active>true</active>
        <errorConditionFormula>IF(!ISNULL(rstk__pebom_scrappct__c),OR(rstk__pebom_scrappct__c&lt;0, rstk__pebom_scrappct__c&gt;=1),false)</errorConditionFormula>
        <errorDisplayField>rstk__pebom_scrappct__c</errorDisplayField>
        <errorMessage>Please enter a Scrap Factor greater than or equal to 0 and less than 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Quantity_Fixed_Quantity</fullName>
        <active>true</active>
        <description>Setup Quantity cannot be greater than Qty Per for Fixed Quantity</description>
        <errorConditionFormula>rstk__pebom_fixqtyflag__c == true &amp;&amp;  rstk__pebom_setupqty__c &gt;  rstk__pebom_qtyper__c</errorConditionFormula>
        <errorMessage>Setup Quantity cannot be greater than Qty Per for Fixed Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Quantity_Qty_Per</fullName>
        <active>true</active>
        <description>Setup Quantity must be zero if Qty Per is zero.</description>
        <errorConditionFormula>rstk__pebom_qtyper__c == 0 &amp;&amp;  rstk__pebom_setupqty__c != 0</errorConditionFormula>
        <errorMessage>Setup Quantity must be zero if Qty Per is zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_AddEvent_Compitem</fullName>
        <active>true</active>
        <description>Validate Add PEBOM from Compitem</description>
        <errorConditionFormula>ISPICKVAL( rstk__pebom_compitem__r.rstk__peitem_itemtype__c , 
&apos;Labor Only&apos;)</errorConditionFormula>
        <errorMessage>Labor Only Items may not be added as BOM Components</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_AddEvent_Item</fullName>
        <active>true</active>
        <description>Check Add PEBOM from Item</description>
        <errorConditionFormula>ISPICKVAL(rstk__pebom_item__r.rstk__peitem_itemtype__c,
&apos;Labor Only&apos;)</errorConditionFormula>
        <errorMessage>Labor Only Items may not have BOM structures</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Item_Revision</fullName>
        <active>true</active>
        <description>Add Revision&apos;s Item must match Parent Item</description>
        <errorConditionFormula>rstk__pebom_addrev__r.rstk__peitemrev_item__c != null &amp;&amp; rstk__pebom_item__c != null &amp;&amp; rstk__pebom_addrev__r.rstk__peitemrev_item__c != rstk__pebom_item__c</errorConditionFormula>
        <errorMessage>Add Revision&apos;s Item must match Parent Item</errorMessage>
    </validationRules>
</CustomObject>